refactor: round 결과 메소드 리턴 방식 변경(책임 분리)